# universal-inbox

./: .common-rust.justfile  .dockerignore  .envrc  .gitignore  .justfile  .justfile.local  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  cliff.toml  committed.toml  devbox.json  justfile  process-compose-pg.yaml  process-compose.yaml  rust-analyzer.json
api/: .justfile  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Makefile.toml  justfile  sqlx-data.json
api/.config/: nextest.toml
api/.sqlx/: query-020ddace3ba71b0b5107518cb6c748d181b60f1e696056b29f9c725d421e8830.json  query-02eb7fc382528e514e1df580475bb4430457fe7f573de2ef9f3842e1388ed428.json  query-0315c027dc55a064b5b610abf3c826eea8486ae8da586cd6350ce88138372fcd.json  query-048f510f91cd879cbce447931f8dd1fcffba847bb5ddb68b57ed0a76ceedb186.json  query-0656d95af27ca7f93365f3f9c3f6f58defa654ac401d192ed4acc3393de6bc50.json  query-0990e04b8e9e3564108b00086fefedb43b2f5e78519b8a121991a46105bf9b1d.json  query-0a38226137b33e6a5ba15655ccb62e54c1a64b77713b11b8937325b333b25066.json  query-0b19e5e3ad5bbf693e20274d9787ce969acb4b5996b680be0bf86fd33a8c4abd.json  query-105e5cf430f32e5351b8ff613e4a37cacd7606548c71b308b10222961ce37424.json  query-1091a399ca9f61668d50f7da2c6c69e96d6dcc3f4f5f36873862e2b099b3a63f.json  query-12cd9f7a4a1272127d803f156d3efb46ac3130c1b3cd7751864779bbb2acdd02.json  query-17f7dff0bbb91c9ede066cd1181e41e934d75de78248188a48d8dd1d9668b91f.json  query-1a1225fcf3def85d9fead9ee3a150f6f53acb3cf29fadf63b3a656329cd61ecf.json  query-1a1d353aced3761251dcfc2d4e6395b6f9ade4d8d5fa5cb4e8f829560258ce0e.json  query-1a597738ce89867da1f54f1f8c8c861543a8a8d7d9f7fea94102c50fea4aeba9.json  query-1aca360dcb61b5c96f0f44d68e36d8d15b44bb4286aacc530eeaae46eda7732a.json  query-1c1be9a8d29b21c66d620c0de479668ed5390402163b46c582c84d1957f1c433.json  query-1c8bfc0312508ead52f6631fa1f48f5b67be7b6960b0b09788bf6d6bfc97d895.json  query-1f6f3e364e0a559f6951c963e39ef48d93dd0c4d6c8a786a161c0cd2aa9cc848.json  query-215f56b83030fe2a6c8d9e1e1444543cc5bf1458360b956db0bc223e8a77b957.json  query-2346ccff25a18fd00b1c5551d449628a8ac7e28b26159c743b99f9a17198865d.json  query-27df11e68e748e133e99ed2f11af9d7ed1d56e80c65d71131235eae0d7395bc5.json  query-282dff55bab4ff832107f9b30e54c9a5d954ce96cb3c465fc6fa966911988b04.json  query-28885ef55b2b08a2b2d747999d84dd7895e4cb379588c7da383f80420b6b8d93.json  query-29c43bead8baebf7496c6a6ca6721bdf09a339d478ef69d6f1422db0b7c50c9d.json  query-2a7e597e57444af5290d699d6fe651fc421047f3741ec54e258d5d428b0f0f81.json  query-2c05560fbefd308d73e8746ca1aa43623295d8c8505b91fdb56be840327c0a87.json  query-2deb31e0f09e8638037520b881d4ef4c979f8fdbde2870cbdc3aeadae325cee4.json  query-2e6e95e026ff52952122ca0846793525e448ae57c50503db456fd15e29eb6d40.json  query-31f9fb29656e635af5d6fbc345ca6e485277e5153ba0d05e7fa5d9b8a8d3576b.json  query-33fc4b357479024549212d9d7fa4bb404fe53c6b670e0c3ef6f8417f1a9d189e.json  query-3596c00a5b9cd6550bb6abdd7ae073ce14918b7142bbb7b31e728ed753fdf08a.json  query-37eae481b014abe3f0ffdb5a09d26b12279e2d97d4e77a5038903b6faf65be2e.json  query-39d564ff3243b2f8489b236a1beacac1c44eeb60d48e256f0d41d0aff268b6fd.json  query-3a30daa8388ca53f56d06976d4b738d7692c83d8ef14873d51316186b3bd2031.json  query-3b90ffa7f3f9bcdfa05d57e26615b1a3c6ebff2769c08f71dab6f1b9648e9ab4.json  query-3ba4a7aec87c0100e316932cca5299f5f98ee8068ec0a5cb46fd700c50d61c7a.json  query-3bb50ddb67f2589270f57e1ad833684ba26211d6514d39c265799f5f1b427ba3.json  query-3d8497b2fa4a1e8d7eaf874a08ffff705e107075f18f1be9c51b1b703a12348f.json  query-3d9d3193b66aff4a6871cd3c7e76cec781f3a3cffbb80998be6f56c534110ac1.json  (+113 more)
api/config/: default.toml  dev.toml  prod.toml  test.toml
api/migrations/: 20220516142230_create_notification_table.down.sql  20220516142230_create_notification_table.sql  20220718100741_add_source_id_to_notification.down.sql  20220718100741_add_source_id_to_notification.up.sql  20221024085355_add_source_html_url_to_notification.down.sql  20221024085355_add_source_html_url_to_notification.up.sql  20221121091548_add_snoozed_until_to_notification.down.sql  20221121091548_add_snoozed_until_to_notification.up.sql  20221126140841_remove_notification_kind_column.down.sql  20221126140841_remove_notification_kind_column.up.sql  20221130200214_create_task_table.down.sql  20221130200214_create_task_table.up.sql  20221205083347_change_due_at_column_type.down.sql  20221205083347_change_due_at_column_type.up.sql  20221209082457_add_task_to_notifications.down.sql  20221209082457_add_task_to_notifications.up.sql  20221223093954_add_deleted_task_status_value.down.sql  20221223093954_add_deleted_task_status_value.up.sql  20230212124013_add_fulltext_search_on_task.down.sql  20230212124013_add_fulltext_search_on_task.up.sql  20230307223132_drop_task_source_id_column_from_notification_table.down.sql  20230307223132_drop_task_source_id_column_from_notification_table.up.sql  20230329185659_create_user_table.down.sql  20230329185659_create_user_table.up.sql  20230330200458_link_notifications_and_tasks_to_user.down.sql  20230330200458_link_notifications_and_tasks_to_user.up.sql  20230407123543_create_integration_connection_table.down.sql  20230407123543_create_integration_connection_table.up.sql  20230501121609_add_integration_provider_kind_uniqueness.down.sql  20230501121609_add_integration_provider_kind_uniqueness.up.sql  20230530185128_add_sync_status_to_integration_connections.down.sql  20230530185128_add_sync_status_to_integration_connections.up.sql  20230612091800_add_auth_id_token_to_user.down.sql  20230612091800_add_auth_id_token_to_user.up.sql  20230717075917_update_notification_status_type.down.sql  20230717075917_update_notification_status_type.up.sql  20230724134413_add_integration_connection_context.down.sql  20230724134413_add_integration_connection_context.up.sql  (+91 more)
web/: .justfile  .pre-commit-config.yaml  Cargo.toml  Dioxus.toml  Makefile.toml  Trunk.toml  index-empty.html  index-trunk.html  index.html  index.js  justfile  package-lock.json  package.json  rspack.config.js  spack.config.js  tailwind.config.js
(+523 files in other folders)
