[package]
name = "universal-inbox"
version.workspace = true
edition.workspace = true
authors.workspace = true

[workspace]
members = ["api", "web"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["David Rousselie <david@universal-inbox.com>"]

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true }
email_address = { workspace = true }
emojis = "0.6.0"
enum_derive = { workspace = true }
git-url-parse = "0.4.0"
macro-attr = { workspace = true }
num_enum = "0.7.0"
openidconnect = { workspace = true }
regex = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_repr = "0.1.0"
serde_urlencoded = { workspace = true }
serde_with = { workspace = true }
slack-blocks-render = { workspace = true }
slack-morphism = { workspace = true }
typed_id = { version = "0.1.0", features = ["serde"] }
unicode-segmentation = "1.11.0"
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["serde"] }
validator = { workspace = true }

[workspace.dependencies]
anyhow = { version = "1.0" }
chrono = { version = "0.4.0", default-features = false, features = [
  "clock",
  "std",
] }
clap = { version = "4.1.0", features = ["derive"] }
email_address = { version = "0.2" }
enum_derive = { version = "0.1.0" }
http = { version = "1.1.0" }
itertools = { version = "0.13.0" }
lazy_static = { version = "1.4.0" }
log = { version = "0.4.0" }
macro-attr = { version = "0.2.0" }
openidconnect = { version = "3.5.0" }
pretty_assertions = { version = "1.3.0" }
regex = { version = "1.10.0" }
reqwest = { version = "0.12", features = ["json", "cookies"] }
rstest = { version = "0.23.0" }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_urlencoded = { version = "0.7.0" }
serde_with = { version = "3.8.0" }
slack-blocks-render = { version = "0.1.0" }
slack-morphism = { version = "2.4.0" }
thiserror = { version = "1.0" }
url = { version = "2.5.0" }
uuid = { version = "1.0", features = ["v4"] }
validator = { version = "0.18.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }

[patch.crates-io]
slack-morphism = { git = "https://github.com/dax/slack-morphism-rust", branch = "add-blocks-to-message-attachment" }
