[package]
name = "universal-inbox-web"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "universal-inbox-web"

[dependencies]
anyhow = { workspace = true }
cfg-if = "1.0"
chrono = { workspace = true, features = ["wasmbind"] }
comrak = { version = "0.32.0", default-features = false, features = ["shortcodes"] }
console_error_panic_hook = "0.1"
console_log = { version = "1.0", features = ["color"], optional = true }
dioxus = { version = "0.6", features = ["document", "web", "router"] }
dioxus-free-icons = { version = "0.9", features = ["bootstrap", "ionicons", "octicons"] }
email_address = { workspace = true }
futures-util = "0.3"
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-utils = "0.2.0"
gravatar-rs = "0.2.0"
http = { workspace = true }
itertools = { workspace = true }
js-sys = "0.3"
lazy_static = { workspace = true }
log = { workspace = true }
openidconnect = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = "0.6.0"
slack-morphism = { workspace = true }
sorted-groups = "0.2.0"
universal-inbox = { path = ".." }
url = { workspace = true }
uuid = { workspace = true, features = ["js"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "=0.2.99"

[dependencies.web-sys]
version = "0.3"
features = [
  "Clipboard",
  "CustomEvent",
  "DomTokenList",
  "Element",
  "EventListener",
  "EventTarget",
  "Headers",
  "HtmlInputElement",
  "InputEvent",
  "InputEventInit",
  "MediaQueryList",
  "Navigator",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "ScrollToOptions",
  "Storage",
  "Window",
]

[dev-dependencies]
pretty_assertions = { workspace = true }
wasm-bindgen-test = "0.3.0"

[features]
default = ["web", "console_log"]
web = ["dioxus/web"]
