[package]
name = "universal-inbox-web"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "universal-inbox-web"

[dependencies]
ammonia = "4.0.0"
anyhow = { workspace = true }
cfg-if = "1.0"
chrono = { workspace = true, features = ["wasmbind"] }
chrono-tz = "0.10"
comrak = { version = "0.41.0", default-features = false, features = [
  "shortcodes",
] }
console_error_panic_hook = "0.1"
console_log = { version = "1.0", features = ["color"], optional = true }
dioxus = { version = "0.6", features = ["document", "web", "router"] }
dioxus-free-icons = { version = "0.9", features = [
  "bootstrap",
  "material-design-icons-action",
  "material-design-icons-communication",
  "octicons",
] }
email_address = { workspace = true }
emojis = { workspace = true }
futures-util = "0.3"
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-utils = "0.2.0"
gravatar-rs = "0.2.0"
itertools = { workspace = true }
js-sys = "0.3"
json_value_merge = "2.0.1"
lazy_static = { workspace = true }
log = { workspace = true }
openidconnect = { workspace = true }
rand = { version = "0.9" }
regex = { workspace = true }
reqwest = { workspace = true }
rrule = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
serde-wasm-bindgen = "0.6.0"
slack-blocks-render = { workspace = true }
slack-morphism = { workspace = true }
sorted-groups = "0.2.0"
strum = { workspace = true }
universal-inbox = { path = ".." }
url = { workspace = true }
uuid = { workspace = true, features = ["js"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "=0.2.100"
webauthn-rs-proto = { workspace = true, features = ["wasm"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Clipboard",
  "CredentialsContainer",
  "CustomEvent",
  "Document",
  "DomTokenList",
  "Element",
  "EventListener",
  "EventTarget",
  "Headers",
  "HtmlInputElement",
  "InputEvent",
  "InputEventInit",
  "MediaQueryList",
  "MouseEvent",
  "Navigator",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "ScrollToOptions",
  "Storage",
  "Window",
]

# Only used to force enabling the `wasm_js` feature
# This is a transitive dependency of:
# - slack-morphism
# - rand
# - rand_core
[dependencies.getrandom]
version = "0.3.3"
features = ["wasm_js"]

[package.metadata.cargo-machete]
ignored = ["getrandom"]

[dev-dependencies]
pretty_assertions = { workspace = true }
wasm-bindgen-test = "0.3.0"

[features]
default = ["web", "console_log"]
web = ["dioxus/web"]
trunk = []

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
