[package]
name = "universal-inbox-web"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "universal-inbox-web"

[dependencies]
ammonia = "4.0.0"
anyhow = { workspace = true }
cfg-if = "1.0"
chrono = { workspace = true }
chrono-tz = "0.10.3"
comrak = { version = "0.50.0", default-features = false, features = [
  "shortcodes",
] }
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "1.0", features = ["color"], optional = true }
dioxus = { version = "0.7", features = ["document", "router"] }
dioxus-free-icons = { version = "0.10", features = [
  "bootstrap",
  "material-design-icons-action",
  "material-design-icons-communication",
  "octicons",
] }
email_address = { workspace = true }
emojis = { workspace = true }
futures-util = "0.3"
gloo-timers = { version = "0.3.0", features = ["futures"], optional = true }
gloo-utils = { version = "0.2.0", optional = true }
gravatar-rs = "0.2.0"
itertools = { workspace = true }
js-sys = { version = "0.3", optional = true }
json_value_merge = "2.0.1"
lazy_static = { workspace = true }
log = { workspace = true }
openidconnect = { workspace = true }
rand = { version = "0.9" }
regex = { workspace = true }
reqwest = { workspace = true }
rrule = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
serde-wasm-bindgen = { version = "0.6.0", optional = true }
slack-blocks-render = { workspace = true }
slack-morphism = { workspace = true }
sorted-groups = "0.2.0"
strum = { workspace = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
tokio = { version = "1", features = ["time"], optional = true }
universal-inbox = { path = ".." }
url = { workspace = true }
uuid = { workspace = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm-bindgen = { version = "=0.2.108", optional = true }
webauthn-rs-proto = { workspace = true, features = ["wasm"], optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  "Clipboard",
  "CredentialsContainer",
  "CustomEvent",
  "Document",
  "DomTokenList",
  "Element",
  "EventListener",
  "EventTarget",
  "Headers",
  "HtmlInputElement",
  "InputEvent",
  "InputEventInit",
  "MediaQueryList",
  "MouseEvent",
  "Navigator",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "ScrollToOptions",
  "Storage",
  "Window",
]

# Only used to force enabling the `wasm_js` feature
# This is a transitive dependency of:
# - slack-morphism
# - rand
# - rand_core
[dependencies.getrandom]
version = "0.3.4"
optional = true
features = ["wasm_js"]

[package.metadata.cargo-machete]
ignored = ["getrandom"]

[dev-dependencies]
pretty_assertions = { workspace = true }
wasm-bindgen-test = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { workspace = true, features = ["serde", "wasmbind"] }
uuid = { workspace = true, features = ["serde", "js"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[features]
default = ["web", "console_log"]
web = ["dioxus/web", "dep:console_error_panic_hook", "dep:gloo-timers", "dep:gloo-utils", "dep:js-sys", "dep:serde-wasm-bindgen", "dep:wasm-bindgen-futures", "dep:wasm-bindgen", "dep:web-sys", "dep:getrandom", "dep:webauthn-rs-proto"]
mobile = ["dioxus/mobile", "dep:tokio", "dep:openssl"]
console_log = ["dep:console_log"]
trunk = []

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
